# sonarr_youtubedl

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yaml  update-ytdlp.yml
app/: config.yml.template  cron_entrypoint.py  sonarr_youtubedl.py  utils.py
app/sytdl/: __init__.py  config.py  downloader.py  logging_utils.py  media.py  service.py  sonarr.py
tests/: test_config.py  test_cron_entrypoint.py  test_downloader.py  test_media.py  test_service.py  test_sonarr.py
