[project]
name = "sonarr-youtubedl"
version = "0.1.0"
description = "Download web series for Sonarr v4 using yt-dlp"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.3,<7",
    "requests>=2.32.5,<3",
    "yt-dlp[curl-cffi,default]==2026.7.4",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1,<10",
]

[tool.uv]
package = false
required-version = ">=0.11,<0.12"

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
